# vncproto

./: .gitignore  Makefile.am  configure.ac  vnc.h  vncproto.h  vncproto.pc.in
specs/: Makefile.am  vnc.xml
