
if ENABLE_SPECS

# Main Docbook/XML files (DOCTYPE book)
docbook = vnc.xml

# The location where the DocBook/XML files and their generated formats are installed
shelfdir = $(docdir)

# Generate DocBook/XML output formats with or without stylesheets
include $(top_srcdir)/docbook.am

endif ENABLE_SPECS
